--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>  
-	<h1>Welcome to My Library..</h1>
-
-	<script type="text/javascript" href="script.js"></script>
+	<h1 class="title">Welecome To Our Library</h1>
+	<div class="container">
+	</div>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
 
