created NEW BOOK button and the input form

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
 	<title>Library...</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>  
-	<h1 class="title">Welecome To Our Library</h1>
-	<div class="container">
+<body>
+	<div class="inputForm">
+		<form action="">
+			<input type="text" placeholder="Title">
+			<input type="text" placeholder="Author">
+			<input type="text" placeholder="Pages">
+			<input type="text" placeholder="Reading staturs">
+			<input type="submit" placeholder="Submit" class="btn submit">  
+		</form>
+	
 	</div>
+
+	<div class="wrapper">
+		<div class="container">
+		</div>
+
+		<button class="addBook btn">
+			Add Book
+		</button>
+	</div>
+
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
