added event listener to Add book btn that shows the input form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div class="inputForm">
+	<div class="inputForm removeForm">
 		<form action="">
 			<input type="text" placeholder="Title">
 			<input type="text" placeholder="Author">
