function to submit btn that get inputs from the inputform and print them on the display

--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
 </head>
 <body>
 	<div class="inputForm removeForm">
-		<form action="">
-			<input type="text" placeholder="Title">
-			<input type="text" placeholder="Author">
-			<input type="text" placeholder="Pages">
-			<input type="text" placeholder="Reading staturs">
-			<input type="submit" placeholder="Submit" class="btn submit">  
-		</form>
-	
+		<h3>Add a new book</h3>
+			<form action="">
+				<input type="text" placeholder="Title" class="input">
+				<input type="text" placeholder="Author" class="input">
+				<input type="text" placeholder="Pages" class="input">
+				<input type="text" placeholder="Did you read it?" class="input"> 
+			</form> 
+			<button class="btn submit">Submit</button> 
 	</div>
 
 	<div class="wrapper">
-		<div class="container">
+		<h1>Welcome To Libraray</h1>
+		<div class="btnContainer">
+			<button class="addBook btn">
+				Add Book
+			</button>
 		</div>
 
-		<button class="addBook btn">
-			Add Book
-		</button>
+		<div class="container">
+		</div>
 	</div>
 
 <script type="text/javascript" src="script.js"></script>
